--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/websocket": "^1.0.12",
+    "fromnow": "^3.0.1",
     "hcaptcha": "0.0.2",
     "node-iplocate": "^1.0.2",
     "pg": "^8.4.2",
     "public-ip": "^4.0.2",
+    "qrcode": "^1.4.4",
     "uniqid": "^5.2.0",
-    "uuid": "^8.3.1",
-    "qrcode": "^1.4.4"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "autoload": {
