--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "qrcode": "^1.4.4",
     "uniqid": "^5.2.0",
     "uuid": "^8.3.1",
-    "coinbase": "^2.0.8"
+    "axios": "^0.21.1"
   },
   "devDependencies": {},
   "autoload": {
