--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "public-ip": "^4.0.2",
     "qrcode": "^1.4.4",
     "uniqid": "^5.2.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-regenerator": "^7.12.1",
