--- a/package.json
+++ b/package.json
@@ -43,10 +43,16 @@
     "qrcode": "^1.4.4",
     "uniqid": "^5.2.0",
     "uuid": "^8.3.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/plugin-transform-regenerator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
   },
