--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "uuid": "^8.3.1",
     "moment": "^2.29.1",
     "socket.io": "^3.1.0",
-    "socket.io-client": "^3.1.0"
+    "socket.io-client": "^3.1.0",
+    "adonis-scheduler": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
