--- a/package.json
+++ b/package.json
@@ -33,26 +33,29 @@
     "@adonisjs/websocket": "^1.0.12",
     "@adonisjs/websocket-client": "^1.0.9",
     "@babel/polyfill": "^7.12.1",
+    "adonis-scheduler": "^3.0.2",
     "axios": "^0.21.1",
     "coingecko-api": "^1.0.10",
     "fromnow": "^3.0.1",
     "hcaptcha": "0.0.2",
+    "moment": "^2.29.1",
     "node-iplocate": "^1.0.2",
     "pg": "^8.4.2",
     "public-ip": "^4.0.2",
     "qrcode": "^1.4.4",
-    "uniqid": "^5.2.0",
-    "uuid": "^8.3.1",
-    "moment": "^2.29.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
-    "adonis-scheduler": "^3.0.2"
+    "uniqid": "^5.2.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-regenerator": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@rollup/plugin-babel": "^5.2.3",
     "babel-loader": "^8.2.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1"
