--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
     "uniqid": "^5.2.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "cryptocurrency-unit-convert": "^1.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
