--- a/package.json
+++ b/package.json
@@ -48,10 +48,9 @@
     "qrcode": "^1.4.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "socket.io": "^3.1.0",
-    "socket.io-client": "^3.1.0",
     "uniqid": "^5.2.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "bitgo": "~8.0.0-rc.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
