--- a/package.json
+++ b/package.json
@@ -34,23 +34,27 @@
     "@adonisjs/websocket": "^1.0.12",
     "@adonisjs/websocket-client": "^1.0.9",
     "@babel/polyfill": "^7.12.1",
+    "@otplib/core-async": "^12.0.1",
     "adonis-scheduler": "^3.0.2",
     "axios": "^0.21.1",
+    "bitgo": "~8.0.0-rc.0",
     "coingecko-api": "^1.0.10",
     "cryptocurrency-unit-convert": "^1.2.8",
     "fromnow": "^3.0.1",
     "hcaptcha": "0.0.2",
+    "markdown-it": "^12.0.6",
     "moment": "^2.29.1",
     "node-2fa": "^2.0.2",
     "node-iplocate": "^1.0.2",
+    "otplib": "^12.0.1",
+    "pem": "^1.14.4",
     "pg": "^8.4.2",
     "public-ip": "^4.0.2",
     "qrcode": "^1.4.4",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "uniqid": "^5.2.0",
-    "uuid": "^8.3.1",
-    "bitgo": "~8.0.0-rc.0"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
