--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,33 @@
+TITLE=Crypton
 HOST=127.0.0.1
 PORT=3333
 NODE_ENV=development
-APP_URL=http://${HOST}:${PORT}
-
+APP_URL=
 CACHE_VIEWS=false
-
-APP_KEY=
-
-DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
+APP_KEY=FoyfsGvGIUmyfNfNnzUl9zqmgHWYz79E
+DB_CONNECTION=pg
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
 DB_PASSWORD=
-DB_DATABASE=adonis
-
-SESSION_DRIVER=cookie
+DB_DATABASE=crypton
+REDIS_CONNECTION=local
+SESSION_DRIVER=redis
 HASH_DRIVER=bcrypt
+captcha_secret=
+captcha_key=
+SMTP_PORT=
+SMTP_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_SENDER=
+BITGO_KEY=
+BITGO_ENV=
+WALLET_BTC=tbtc
+WALLET_BCH=tbch
+WALLET_DASH=tdash
+WALLET_LTC=tltc
+FB_CLIENT_ID=
+FB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
