added some coins

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "test": "node ace test"
   },
-  "engines": { "node": "14.x" },
+  "engines": {
+    "node": "14.x"
+  },
   "keywords": [
     "adonisjs",
     "adonis-app"
